<resources>
    <string name="app_name">hw1_dialer</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="asterisc">*</string>
    <string name="hashtag">#</string>
    <string name="memory1">Memory 1</string>
    <string name="memory2">Memory 2</string>
    <string name="memory3">Memory 3</string>

</resources>